# autoresearch-desktop

./: .gitignore  BEDIENUNGSANLEITUNG.md  continuation_prompt.md  creative_director_prompt.md  creative_director_prompt_skills.md  creative_implementation_prompt.md  creative_prompts_round_1.md  creative_review.md  creative_review_skills.md  examiner_prompt.md  examiner_prompt_round2.md  examiner_report.md  project_brief.md  revision_log.md
app/: package-lock.json  package.json
app/app/: globals.css  layout.js  page.js
app/app/api/demo/: route.js
app/app/api/engine/: route.js
app/app/api/experiments/: route.js
app/app/api/modal/: route.js
app/app/api/seed/: route.js
app/app/api/status/: route.js
app/app/api/workflows/: route.js
app/app/components/: AutonomyView.js  DiffViewer.js  EmptyState.js  ExperimentTable.js  GuidedTour.js  HeroSummary.js  OnboardingFlow.js  ProgressChart.js  ProgressRing.js  Sidebar.js  StatsGrid.js  TerminalLog.js  TopBar.js  WorkflowModal.js
app/lib/: database.js
engine/: modal_train.py  prepare_mlx.py  pyproject.toml  run_experiment.py  train_mlx.py
